--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <html>
-  <head>
-    <title> Teste </title>
-  </head>
-      
-      <boby>
-        <h1> teste </h1>
-      </boby>
-    
-  <html>
+    <head>
+        <title>NT TINTAS - Saia do preto e branco, transforme seu ambiente colorido</title>
+        <link rel="stylesheet" href="text/css" href="styles.css">
+    </head>
+    <body>
+        <img src="LOGO_MARCA_SEMFUNDO.png" width="40%">
+        <h1>Menu</h1>
+        <li><a href="externolink.html">PINTURA EXTERNA</a></li>
+        <li><a href="marmorizadalink.html">PINTURA MARMORIZADA</a></li>
+        <li><a href="internolink.html">PINTURA INTERNA
+        <li><a href="borrachaliquidalink.html">TINTA BORACHA LÍQUIDA</a></li>
+        <li><a href="massacorridalink.html">MASSA CORRIDA</a></li>
+    </body>
+</html>
