--- a/login.html
+++ b/login.html
@@ -8,18 +8,19 @@
 
 
 <body style=" background-color:#D8BFD8;">
-
+<fieldset> <legend>Fale Conosco</legend>
     <table border="2" align="center"> 
         <div style="margin: auto;" align ="Center" >
             <img src="imagens/LOGO_MARCA_SEMFUNDO.png" width="30%">
+            <h2>FALE CONOSCO </h2>
          </div> 
         <tr>
          <td align="center">
  <form action="/login.html" >
      <label for="Pname">Nome:</label>
      <input type="text"id="Pname"name="Pname"><br><br>
-     <label for="Sname">Sobrenome:</label>
-     <input type="text"id="Sname"name="Sname"><br><br>
+     <label for="email">Email:</label>
+     <input type="email"id="email"name="email"><br><br>
      <label for="Assunto">Assunto:</label>
      <input type="text"id="Assunto"name="Sname"><br><br>
      <label for="Assunto">Mensagem*:</label><br>
@@ -27,13 +28,15 @@
     
  </td>
  </tr>
- <table align="center"border="1">
+ <table align="center">
     <tr>
      <td>  <input type="submit"value="Enviar">
             <input type="reset">
     </td>
     </tr>
     </table>
+</table>
+</fieldset>
 
     
 </body>
