--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     </body>
 
     <div>
-    <h1 style="margin: auto;" align ="center">Login</h2>
+    <h1 style="margin: auto;" align ="center">Contato</h2>
     </div>
     <div>
-    <li style="margin: auto;" align ="center"><a href="login.html">LOGIN</a></li>
+    <li style="margin: auto;" align ="center"><a href="login.html">Fale Conosco</a></li>
     </div>
 
 <div style="width: 640; margin: auto;" >
